--- a/src/pages/Profile/Profile.module.css
+++ b/src/pages/Profile/Profile.module.css
@@ -9,7 +9,7 @@
   flex-direction: column;
   align-items: center;
 
-  padding-bottom: 80px; /* ajuste conforme a altura da Homebar */
+  min-height: 100vh; 
   box-sizing: border-box;
   overflow-y: auto;
 }
