--- a/src/pages/Profile/DataUser/DataUser.module.css
+++ b/src/pages/Profile/DataUser/DataUser.module.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: #f44336;
+    background-color: #23457a;
     width: 100vw;
     height: 100vh;
     font-family: 'Poppins', sans-serif;
